--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -12,4 +12,8 @@ jobs:
         run: |
           node -v
           npm -v
-          
+      - name: python Commands
+        run: |
+          import platform
+          pritnt(platform.processor())  
+        shell: phyton  
