import commit fixed updated 2

--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -12,7 +12,7 @@ jobs:
         run: |
           node -v
           npm -v
-      - name: phyton Commands
+      - name: phyton Command
         run: |
           import platform
           pritnt(platform.processor())  
