--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -12,8 +12,8 @@ jobs:
         run: |
           node -v
           npm -v
-      - name: phyton Command
+      - name: python Command
         run: |
           import platform
           pritnt(platform.processor())  
-        shell: phyton  
+        shell: python  
