--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -9,7 +9,13 @@ jobs:
       - name: List Files
         run: |
           pwd
+          ls -a
+      - name: List Files after Checkout
+        run: |
+          pwd
           ls
+      - name: Checkout
+        uses: actions/checkout@v1
       - name: Simple JS Action
         id: greet
         uses: actions/hello-world-javascript-action@v1
