--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,9 +1,13 @@
 name: Actions Workflow
 
+#on:
+  # push:
+  # pull_request:
+  #  types: [closed, assigned, opened, reopened]
+
 on:
-  push:
-  pull_request:
-    types: [closed, assigned, opened, reopened]
+  schedule:
+    - cron: "0/5 * * * *"
 
 jobs:
   run-github-actions:
