--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -7,7 +7,8 @@ name: Actions Workflow
 
 on:
   schedule:
-    - cron: "0/5 * * * *"
+    - cron: "0/2 * * * *"
+  push:
 
 jobs:
   run-github-actions:
